# insurance-fund

./: .gitignore  .solhint.json  README.md  brownie-config.yaml  deployed.goerli.json  deployed.mainnet.json  pyproject.toml
.github/workflows/: analyse.yml
contracts/: InsuranceFund.sol
contracts/test_helpers/: Destructable.sol  EtherRejector.sol  MockERC1155.sol  MockERC721.sol  UnsafeMockERC1155.sol
interfaces/: InsuranceFund.json
scripts/: check.py  deploy.py
tests/: conftest.py  test_deploy.py  test_ownership.py  test_receive_ether.py  test_send_ether.py  test_transfer_erc1155.py  test_transfer_erc20.py  test_transfer_erc721.py  test_transfer_ether.py
utils/: config.py  env.py  helpers.py  log.py
