[tool.poetry]
name = "insurance_fund"
version = "0.1.0"
description = ""
authors = ["Azat Serikov <azatsdev@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
eth-brownie = "^1.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
